Removing js and js.map files, updating karma config

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<h2>
- 	Intersection
-</h2>
+<h1>
+ 	Intersection Challenge
+</h1>
 
 <p>I have made the assumption that the state of the light will change from red to green and back every 5 minutes (i.e. yellow light occurs from 4 minutes 30 seconds to 5 minutes in the cycle).</p>
 
 <main>
 
-	<h3>
+	<h2>
 		Visual Representation (20x speed)
-	</h3>
+	</h2>
 
 	Time: {{ spedUpDisplayTime }}
 
@@ -24,9 +24,9 @@
 		<md-grid-tile></md-grid-tile>
 	</md-grid-list>
 
-	<h3>
+	<h2>
 		Output (0 to 30m)
-	</h3>
+	</h2>
 
 	<table>
 		<tr>
